  * Add some dirlisting enhancements (fixes #1458)
  * Add option to enable TCP_DEFER_ACCEPT (fixes #1447)
  * Limit amount of bytes read for one read-event (fixes #1070)
  * Add evasive.silent option (fixes #1438)
  * Make mod_extforward headers configurable (fixes #1545)
  * Add '%_' pattern for complete hostname in mod_evhost (fixes #1737)
  * Add IPv6 support to mod_proxy (fixes #1537)

- 1.4.22 - 2009-03-07
  * Fix wrong lua type for CACHE_MISS/CACHE_HIT in mod_cml (fixes #533)
  * Fix default vhost in mod_simple_vhost (fixes #1905)
  * Handle EINTR in mod_rrdtool (fixes #604)
  * Fix rrd error after graceful restart (fixes #419)
  * Fix EAGAIN handling for freebsd sendfile (fixes #1913, thx AnMaster for spotting the problem)
  * Fix segfault in mod_scgi (fixes #1911)
  * Treat EPIPE as connection-closed error in network_freebsd_sendfile.c (another fix from #1913)
  * Fix useless redirection of stderr in mod_rrdtool, as it gets redirected to /dev/null later. (fixes #1922)
  * Fix some problems with more strict compilers (#1923)
  * Fix segfault if siginfo_t* is NULL in sigaction handler (fixes #1926)

- 1.4.21 - 2009-02-16

  * Fix base64 decoding in mod_auth (#1757, thx guido)
  * Fix mod_cgi segfault when bound to unix domain socket (#653)
  * Do not rely on ioctl FIONREAD (#673)
  * Now really fix mod auth ldap (#1066)
  * Fix leaving zombie process with include_shell (#1777)
  * Removed debian/, openwrt/ and cygwin/; they weren't kept up-to-date, and we decided to remove dist. specific stuff
  * Try to convert string options to shorts for numeric options in config file; allows to use env-vars for numeric options. (#1159, thx andrewb)
  * Do not cache default vhost in mod_simple_vhost (#709)
  * Trust pcre-config, do not check for pcre manually (#1769)
  * Fix fastcgi authorization in subdirectories with check-local=disabled; don't split pathinfo for authorizer. (#963)
  * Add possibility to disable methods in mod_compress (#1773)